src/objects/Series_of_Events__c.object
<CustomObject>
    <description>Used to link events together where a delegate may need to book onto multiple events to complete a course.</description>
    <fields>
        <fullName>BSC_Event_End_Date__c</fullName>
        <description>Pulls in the BSC Event&apos;s End Date</description>
        <formula>BSC_Event__r.EndDate__c</formula>
        <inlineHelpText>Pulls in the BSC Event&apos;s End Date</inlineHelpText>
        <label>BSC Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Start_Date__c</fullName>
        <description>Pulls the BSC Event Start Date from the BSC Event</description>
        <formula>BSC_Event__r.StartDate__c</formula>
        <inlineHelpText>Pulls the BSC Event Start Date from the BSC Event</inlineHelpText>
        <label>BSC Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Venue__c</fullName>
        <description>Pulls in the BSC Event Venue Account Name</description>
        <formula>BSC_Event__r.Venue__r.Name</formula>
        <inlineHelpText>Pulls in the BSC Event Venue Account Name</inlineHelpText>
        <label>BSC Event Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSC_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the event</description>
        <inlineHelpText>Lookup to the event</inlineHelpText>
        <label>BSC Event</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>Series of Events</relationshipLabel>
        <relationshipName>Series_of_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <formula>TEXT(BSC_Event__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <description>This is the name of the series</description>
        <inlineHelpText>This is the name of the series</inlineHelpText>
        <label>Series</label>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>Series of Events</relationshipLabel>
        <relationshipName>Series_of_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Series of Events</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Series ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Series of Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>